Añadido valor de string/botonMainPersonajes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">My Application</string>
     <string name="virtual_alhambra">Virtual Alhambra</string>
     <string name="funciono">FUNCIONO</string>
+    <string name="botonMainPersonajes">Personajes</string>
+
 </resources>
