--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="funciono">FUNCIONO</string>
     <string name="botonMainPersonajes">Personajes</string>
     <string name="oh_oh_para_poder_acceder_a_este_espacio_debes_estar_en_la_alhambra_avisame_cuando_te_encuentres_dentro">¡Oh, oh! Para poder acceder a este espacio debes estar en la Alhambra. Avisame cuando te encuentres dentro.</string>
+    <string name="act_main_no_acuracy">prueba1</string>
+    <string name="act_main_gyroscope_label">hola</string>
+    <string name="act_main_accelerometer_label">bu</string>
 
 </resources>
